<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general">
        <SwitchPreferenceCompat
            app:key="blackMode"
            app:title="@string/black_mode" />

        <ListPreference
            app:defaultValue="english"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="language"
            app:title="@string/languages"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/notifications">

        <SwitchPreferenceCompat
            app:key="noti_news"
            app:title="@string/news_title" />

        <SwitchPreferenceCompat
            app:key="noti_req_blood"
            app:title="@string/req_blood" />
    </PreferenceCategory>

</PreferenceScreen>