<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.LoginFragment" >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvTextWelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_marginTop="24dp"
                android:text="@string/login_fragment_text_welcome"/>

            <TextView
                android:id="@+id/tvSecondTextWelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="16dp"
                android:layout_below="@id/tvTextWelcome"
                android:text="@string/login_fragment_second_text_welcome" />

            <EditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvSecondTextWelcome"
                android:inputType="textEmailAddress"
                android:layout_marginTop="7dp"
                android:textColorHint="@color/grey"
                android:textColor="@color/dark_black"
                android:hint="@string/login_fragment_email"
                android:autofillHints="emailAddress" />

            <EditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edEmail"
                android:inputType="textPassword"
                android:layout_marginTop="7dp"
                android:textColorHint="@color/grey"
                android:textColor="@color/dark_black"
                android:hint="@string/login_fragment_password"
                android:autofillHints="password" />

            <Button
                android:id="@+id/btnJoinUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edPassword"
                android:layout_marginTop="7dp"
                android:text="@string/login_fragment_btn_register" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnJoinUs"
                android:layout_marginTop="7dp"
                android:text="@string/login_fragment_btn_login" />

            <TextView
                android:id="@+id/tvTextUsingOAUTH"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnLogin"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:gravity="center"
                android:text="Or using"
                android:textColor="@color/green"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/oauth"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="7dp"
                android:layout_below="@id/tvTextUsingOAUTH">
                <ImageButton
                    android:id="@+id/oauthGoogle"
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_marginHorizontal="7dp"
                    android:src="@drawable/common_google_signin_btn_icon_dark"
                    android:contentDescription="@string/desc_image" />

                <ImageButton
                    android:id="@+id/oauthTwitter"
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_marginHorizontal="7dp"

                    android:contentDescription="@string/desc_image" />

                <ImageButton
                    android:id="@+id/oauthFacebook"
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_marginHorizontal="7dp"
                    android:background="#ffffff"
                    android:src="@drawable/com_facebook_favicon_blue"
                    android:contentDescription="@string/desc_image" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</layout>